# rc-sim2real

./: .gitignore  README.md
config/: 70-kvoy-gamesir-input.rules
models/policy_1_blind_plane/: policy.pt  policy703.engine  policy703.onnx  policy704.engine  policy704.onnx  policy704largepd.engine  policy704largepd.onnx  policy705p.engine  policy705p.onnx
models/policy_2_blind_terrain/: policy.pt  policy28.engine  policy28.onnx  policy526.engine  policy526.onnx  policy613.engine  policy613.onnx  policy627.engine  policy627.onnx  policy630.engine  policy630.onnx  policy630_late.engine  policy630_late.onnx  policy701.engine  policy701.onnx  policy703r.engine  policy703r.onnx  policy704r.engine  policy704r.onnx  policy705.engine  policy705.onnx
src/gamepad_input/: CMakeLists.txt  package.xml
src/gamepad_input/src/: gamepad_input_node.cpp
src/imu_driver/: CMakeLists.txt  package.xml
src/imu_driver/include/imu_driver/: imu_driver_node.hpp  serial_port.hpp  wit_motion_imu_node.hpp
src/imu_driver/scripts/: imu_diagnostics.py
src/imu_driver/src/: imu_driver_node.cpp  serial_port.cpp  wit_motion_imu_node.cpp
src/kvoy_msgs/: CMakeLists.txt  package.xml
src/kvoy_msgs/msg/: GamepadCmd.msg  ImuData.msg  MotorCmd.msg  MotorState.msg  RobotState.msg
src/rl_controller/: CMakeLists.txt  package.xml
src/rl_controller/include/rl_controller/: rl_controller_node.hpp
src/rl_controller/src/: rl_controller_node.cpp
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: policies.yaml  robot_params.yaml  robot_params_serial_diag.yaml
src/robot_bringup/launch/: bringup.launch.py
src/robot_bringup/scripts/: bringup_restart_supervisor.py  gamesir_usb_watchdog.py  install_gamesir_watchdog_service.sh  install_user_service.sh  kvoy_bringup_autostart.sh  startup_sound_node.py
src/robot_bringup/systemd/: kvoy-bringup.service  kvoy-gamesir-watchdog.service
src/robot_fsm/: CMakeLists.txt  package.xml
src/robot_fsm/include/robot_fsm/: robot_fsm_node.hpp
src/robot_fsm/src/: robot_fsm_node.cpp
src/robot_kinematics/: CMakeLists.txt  package.xml
src/robot_kinematics/include/robot_kinematics/: joint_config.hpp  kinematics_node.hpp
src/robot_kinematics/src/: kinematics_node.cpp
src/serial_comm/: CMakeLists.txt  package.xml
src/serial_comm/include/serial_comm/: protocol.hpp  serial_comm_node.hpp  serial_port.hpp
src/serial_comm/src/: serial_comm_node.cpp  serial_port.cpp
tools/: convert_policy_46_onnx_to_trt.py  convert_policy_onnx_to_trt.py  export_policy_46_onnx.py  export_policy_onnx.py
