<?xml version="1.0"?>
<package format="3">
  <name>gamepad_input</name>
  <version>0.1.0</version>
  <description>Gamepad input node for GameSir 7 Pro (SDL2-based)</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>kvoy_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
