<?xml version="1.0"?>
<package format="3">
  <name>rl_controller</name>
  <version>0.1.0</version>
  <description>HimLoco TensorRT policy inference node for kvoy quadruped</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>kvoy_msgs</depend>
  <depend>robot_kinematics</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
